--- a/src/components/Wcomp.css
+++ b/src/components/Wcomp.css
@@ -230,17 +230,18 @@ pre {
     display:flex;
     justify-content: flex-end;
     font-size: 10px;
+    align-items: center;
 }
 
 .right .chatWrapper .chat .tickTimeWrapper .rightDoubleTick{
-    padding-right: 2px;
+    padding-left: 2px;
 }
 
 
 .right .chatInputWrapper{
     display:flex;
     border:none;
-    height:7%;
+    height:60px;
 }
 
 .right .chatInputWrapper .chatInput{
@@ -249,8 +250,18 @@ pre {
 }
 
 .right .chatInputWrapper .button{
-    flex:1;
-    width:100%;
+    /* flex:1;
+    width:100%; */
+
+    position: absolute;
+    right: 6px;
+    
+    
+   
+    height: 60px;
+    width: 60px;
+
+    border-radius: 50%;
     
 }
 
@@ -272,6 +283,84 @@ pre {
 .rightDoubleTick{
 
 }
+
+.relativeChatWrapper{
+    /* position: absolute; */
+    position: fixed;
+    width: 60px;
+    bottom: 25px;
+    /* right: 0px; */
+    left:25%;
+    height: 60px;
+    color:green;
+    
+}
+
+.relativeChatButton{
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    background-color: green;
+    display: grid;
+    place-content: center;
+}
+
+
+
+
+.childModal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    /* height:50%; */
+    background-color: white;
+    border: solid;
+    /* box-shadow: 24px; */
+    /* pt: 2,
+    px: 4,
+    pb: 3, */
+}
+
+.modalWrapper{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+
+}
+/* 
+.modalInput{
+    width:100%;
+}
+
+.searchedUsersWrapper{
+flex:1;
+width:100%;
+border:red;
+}
+
+.unitSearchedComponent{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    border:solid;
+}
+
+.phoneUserName{
+    display:flex;
+    justify-content: space-around;
+}
+.classPhone{
+
+}
+.classUserName{
+
+}
+
+.classUserId{
+
+} */
 
 
 
