--- a/src/components/Home/Wcomp.css
+++ b/src/components/Home/Wcomp.css
@@ -55,27 +55,29 @@ pre {
   height: 100vh;
   /* border:2px solid black; */
   overflow: hidden;
+  overflow-x: auto;
+  background-color: cornsilk;
 }
 
 .left {
   flex: 3;
-  /* border:2px solid black; */
   display: flex;
   flex-direction: column;
   z-index: 1;
   box-shadow: 1px 1px 15px black;
   border-right: solid;
-  background-color: cornsilk;
+  min-width: 350px;
 }
 
 .left .mainCompWrapper {
   width: 100%;
-  /* background-color: yellow; */
   width: 100%;
   height: 72px;
   display: flex;
   justify-content: flex-start;
   cursor: pointer;
+  align-items: center;
+  border-bottom: 0.5px solid;
 }
 
 .left .mainCompWrapper .nameChatCombineWrapper {
@@ -92,14 +94,15 @@ pre {
 .left .mainCompWrapper .nameChatCombineWrapper .chat {
   padding-top: 0.2em;
   padding-left: 0.7em;
-  text-overflow: hidden;
   color: grey;
+  width: 85%;
 }
 
 .left .mainCompWrapper .time {
-  padding-top: 0.2em;
   color: blue;
   text-align: center;
+  width: max-content;
+  font-weight: 600;
 }
 
 .filter-icon {
@@ -150,7 +153,6 @@ pre {
   flex-direction: column-reverse;
   flex: 1;
   overflow-y: auto;
-  background-color: cornsilk;
 }
 
 .right .chatWrapper .chatLeftRightwrapper {
@@ -232,4 +234,24 @@ pre {
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: cornsilk;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: black;
+}
+
+.popover-elements {
+  padding: 8px 16px;
+  font-weight: bold;
+  font-size: large;
+  border-bottom: 2px solid;
+  cursor: pointer;
+}
+
+.popover-elements:hover{
+  background-color: rgb(25, 25, 25);
 }
