--- a/src/components/Home/Wcomp.css
+++ b/src/components/Home/Wcomp.css
@@ -64,6 +64,7 @@ pre {
   flex-direction: column;
   z-index: 1;
   box-shadow: 1px 1px 15px black;
+  position: relative;
 }
 
 .left .mainCompWrapper {
