--- a/src/components/Home/Wcomp.css
+++ b/src/components/Home/Wcomp.css
@@ -65,6 +65,7 @@ pre {
   z-index: 1;
   box-shadow: 1px 1px 15px black;
   position: relative;
+  width: 400px;
 }
 
 .left .mainCompWrapper {
@@ -82,6 +83,7 @@ pre {
   display: flex;
   flex-direction: column;
   flex: 2;
+  overflow: hidden;
 }
 
 .left .mainCompWrapper .nameChatCombineWrapper .name {
